runit 1.3.0
Sun, 24 Jul 2005 16:50:55 +0000
  * man/runsv.8: typo; no longer document the e control character; clarify
    custom control on d and x.
  * doc/useinit.html: how to use runit with macosx 10.4 (thx Lars Uffmann).
  * etc/macosx/org.smarden.runit.plist: new; launchd plist file for
    runsvdir-start (thx Lars Uffmann).
  * doc/runscripts.html: don't use absolute pathnames for programs in $PATH;
    add contributed run scripts (thx Sascha Huedepohl); typos.
  * runsvchdir.c, runsvstat.c: optimize output buffer handling.
  * runsvctrl.c: write x control character to runsv on e.
  * svlogd.c: write to log dir after possibly writing through udp (fixes
    line break issue).
  * runsv.c, runsv.check: optimize output buffer handling; porperly run
    custom t, d, x, k, when stopping service; no longer support e control
    character.
  * sv.c: new sv program to control services, optionally can be linked to
    /etc/init.d/ as lsb "init script" command line interface.
  * Makefile, TARGETS: adapt.
  * chpst.c: fix pointer types.
  * man/sv.8: new.
  * package/TODO: new.

runit 1.2.3
Mon, 18 Apr 2005 17:08:35 +0000
  * doc/runscripts.html: add contributed run scripts (thx Kevin Berry);
    remove mysql run scripts.
  * svlogd.dist, svwaitdown.dist, svwaitup.dist: fix program selftest's
    false alarms (thx Ian Stokes-Rees).

runit 1.2.2
Sun, 03 Apr 2005 09:21:52 +0000
  * doc/index.html, doc/replaceinit.html: no longer refer to sysvinit's
    shutdown program.
  * man/svlogd.8: svlogd doesn't decrease the number of log files in a log
    directory; with n0 don't remove any log files.
  * svlogd.c: properly prefix log messages written to standard error with
    optional timestamp.
  * runsvctrl.c, svwaitdown.c, svwaitup.c: supervise not running -> runsv
    not running.
  * package/README: 2005.

runit 1.2.1
Sat, 15 Jan 2005 11:57:46 +0000
  * chpst.c: typo.
  * svwaitdown.c: minimum timeout is 1 second; service directories no longer
    must start with /.