@@ -5,3 +5,4 @@ have sv replace runsvctrl, runsvstat, svwaitdown, svwaitup
 rewrite doc/dependencies.html: weak/string deps
 runsv: provide ./run's return code to ./finish, count startups of ./run and
   provide number to ./run
+chpst: -u user[:group0[:group1 ...]]
